Updated with thumbnail link

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="This is a solution to the Notifications page challenge on Frontend Mentor" />
     <meta property="og:title" content="Notifications page design - Frontend Mentor" />
     <meta property="og:description" content="This is a solution to the Notifications page challenge on Frontend Mentor coded by Alamin" />
-    <meta property="og:image" content="" />
+    <meta property="og:image" content="https://raw.githubusercontent.com/CodePapa360/Notification-page-design/main/design/Notifications%20page%20solution%20screenshot%20-%20desktop%20preview.png" />
 
     <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
